fix z-index

--- a/frontend/src/styles/components/_prior-header.scss
+++ b/frontend/src/styles/components/_prior-header.scss
@@ -2,6 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 15px 0 0 0;
+    z-index: 2;
 
     @media (max-width: 1170px) {
         padding: 15px 5px;
