--- a/frontend/src/styles/pages/_requirements-page.scss
+++ b/frontend/src/styles/pages/_requirements-page.scss
@@ -34,7 +34,7 @@
         width: 677px;
         height: 677px;
         position: absolute;
-        z-index: 0;
+        z-index: -1;
         border-radius: 677px;
         filter: blur(53.5px);
     }
